# acrguide

./: pyproject.toml  render.yaml
acrguide/: main.py
acrguide/data/: acr_criteria.json
acrguide/static/: app.js  index.html
