[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acrguide"
version = "0.1.0"
description = "ACR Radiology Guidelines Calculator"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
acrguide = "acrguide.main:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["acrguide*"]
